crates/parsing/tests/snapshots/grammar_tests__application-expression-empty-spine.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1
Start { kind: Sentinel }
Token { kind: LiteralInteger }

