crates/parsing/tests/snapshots/grammar_tests__application-expression-from-expression-1.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1 2
Start { kind: Sentinel }
Start { kind: ApplicationExpression }
  Token { kind: LiteralInteger }
  Token { kind: LiteralInteger }
Finish

