crates/parsing/tests/snapshots/grammar_tests__block-do-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 
run do
  f x
  g y
Start { kind: ApplicationExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: TermArgument }
      Start { kind: DoExpression }
        Start { kind: QualifiedDo }
          Token { kind: DoKw }
        Finish
        Start { kind: OneOrMore }
          Start { kind: DoDiscard }
            Start { kind: ApplicationExpression }
              Start { kind: VariableExpression }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
                Start { kind: TermArgument }
                  Start { kind: VariableExpression }
                    Start { kind: QualifiedName }
                      Start { kind: NameRef }
                        Token { kind: Lower }
                      Finish
                    Finish
                  Finish
                Finish
              Finish
            Finish
          Finish
          Start { kind: DoDiscard }
            Start { kind: ApplicationExpression }
              Start { kind: VariableExpression }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
                Start { kind: TermArgument }
                  Start { kind: VariableExpression }
                    Start { kind: QualifiedName }
                      Start { kind: NameRef }
                        Token { kind: Lower }
                      Finish
                    Finish
                  Finish
                Finish
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

