crates/parsing/tests/snapshots/grammar_tests__block-qualified-do-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: run Hello.do
Start { kind: ApplicationExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: TermArgument }
      Start { kind: QualifiedDo }
        Start { kind: QualifiedPrefix }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
          Token { kind: Period }
        Finish
        Token { kind: DoKw }
      Finish
    Finish
  Finish
Finish

