crates/parsing/tests/snapshots/grammar_tests__char-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 'a'
Start { kind: LiteralBinder }
  Token { kind: LiteralChar }
Finish

