crates/parsing/tests/snapshots/grammar_tests__constructor-n-arity.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Cons 1
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: LiteralBinder }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish

