crates/parsing/tests/snapshots/grammar_tests__constructor-zero-arity.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: Nil
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: Name }
      Token { kind: Upper }
    Finish
  Finish
Finish

